java-core completed with unit and IT testing successfully