@@ -109,8 +109,8 @@
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.13.0</version>
                 <configuration>
-                    <source>17</source>
-                    <target>17</target>
+                    <source>21</source>
+                    <target>21</target>
                 </configuration>
             </plugin>
             <!-- Unit tests: exclude integration tests -->
@@ -120,6 +120,12 @@
                 <version>3.5.2</version>
                 <configuration>
                     <excludedGroups>integration</excludedGroups>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <forkedProcessExitTimeoutInSeconds>5</forkedProcessExitTimeoutInSeconds>
+                    <shutdown>kill</shutdown>
+                    <systemPropertyVariables>
+                        <org.slf4j.simpleLogger.log.com.core.az.AzContentUnderstanding>off</org.slf4j.simpleLogger.log.com.core.az.AzContentUnderstanding>
+                    </systemPropertyVariables>
                 </configuration>
             </plugin>
             <!-- Integration tests: mvn verify -Dgroups=integration -->
@@ -129,6 +135,9 @@
                 <version>3.5.2</version>
                 <configuration>
                     <groups>integration</groups>
+                    <argLine>-XX:+EnableDynamicAgentLoading</argLine>
+                    <forkedProcessExitTimeoutInSeconds>5</forkedProcessExitTimeoutInSeconds>
+                    <shutdown>kill</shutdown>
                 </configuration>
                 <executions>
                     <execution>
